# nimem

./: .gitignore  NOTES.md  README.md  TEST_INVALIDATION.txt  debug_imports.py  example.py  llms.md  main.py  pyproject.toml  test_nimem.db
nimem/: __init__.py  clustering.py  embeddings.py  graph_store.py  memory.py  schema.py  text_processing.py
nimem/core/: clustering.py  embeddings.py  graph_store.py  schema.py  text_processing.py
nimem/tests/: test_clustering.py  test_embeddings.py  test_graph_store.py  test_memory.py  test_text_processing.py
