[project]
name = "nimem"
version = "0.1.0"
description = "A memory system with NLP-powered fact extraction and graph storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gliner>=0.2.0",
    "fastcoref>=2.0",
    "infinity-emb[torch]>=0.0.1",
    "falkordblite>=0.0.1",
    "numpy>=1.20.0",
    "returns>=0.20.0",
    "fast_hdbscan>=0.1.0",
    "scikit-learn>=1.0.0",
    "spacy>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nimem"]
